// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots App|acceptance angular-cli 1`] = `
.emotion-0 {
  font-family: -apple-system,".SFNSText-Regular","San Francisco",BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue","Lucida Grande","Arial",sans-serif;
  color: #444;
  -webkit-font-smoothing: antialiased;
  font-size: 13px;
}

<div
  class="emotion-0 emotion-1"
>
  <iframe
    src="angular-cli/index.html"
    style="border:0;position:absolute;top:0;left:0;width:100vw;height:100vh"
    title="angular-cli"
  />
</div>
`;

exports[`Storyshots App|acceptance cra-kitchen-sink 1`] = `
.emotion-0 {
  font-family: -apple-system,".SFNSText-Regular","San Francisco",BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue","Lucida Grande","Arial",sans-serif;
  color: #444;
  -webkit-font-smoothing: antialiased;
  font-size: 13px;
}

<div
  class="emotion-0 emotion-1"
>
  <iframe
    src="cra-kitchen-sink/index.html"
    style="border:0;position:absolute;top:0;left:0;width:100vw;height:100vh"
    title="cra-kitchen-sink"
  />
</div>
`;

exports[`Storyshots App|acceptance html-kitchen-sink 1`] = `
.emotion-0 {
  font-family: -apple-system,".SFNSText-Regular","San Francisco",BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue","Lucida Grande","Arial",sans-serif;
  color: #444;
  -webkit-font-smoothing: antialiased;
  font-size: 13px;
}

<div
  class="emotion-0 emotion-1"
>
  <iframe
    src="html-kitchen-sink/index.html"
    style="border:0;position:absolute;top:0;left:0;width:100vw;height:100vh"
    title="html-kitchen-sink"
  />
</div>
`;

exports[`Storyshots App|acceptance mithril-kitchen-sink 1`] = `
.emotion-0 {
  font-family: -apple-system,".SFNSText-Regular","San Francisco",BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue","Lucida Grande","Arial",sans-serif;
  color: #444;
  -webkit-font-smoothing: antialiased;
  font-size: 13px;
}

<div
  class="emotion-0 emotion-1"
>
  <iframe
    src="mithril-kitchen-sink/index.html"
    style="border:0;position:absolute;top:0;left:0;width:100vw;height:100vh"
    title="mithril-kitchen-sink"
  />
</div>
`;

exports[`Storyshots App|acceptance polymer-cli 1`] = `
.emotion-0 {
  font-family: -apple-system,".SFNSText-Regular","San Francisco",BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue","Lucida Grande","Arial",sans-serif;
  color: #444;
  -webkit-font-smoothing: antialiased;
  font-size: 13px;
}

<div
  class="emotion-0 emotion-1"
>
  <iframe
    src="polymer-cli/index.html"
    style="border:0;position:absolute;top:0;left:0;width:100vw;height:100vh"
    title="polymer-cli"
  />
</div>
`;

exports[`Storyshots App|acceptance preact-kitchen-sink 1`] = `
.emotion-0 {
  font-family: -apple-system,".SFNSText-Regular","San Francisco",BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue","Lucida Grande","Arial",sans-serif;
  color: #444;
  -webkit-font-smoothing: antialiased;
  font-size: 13px;
}

<div
  class="emotion-0 emotion-1"
>
  <iframe
    src="preact-kitchen-sink/index.html"
    style="border:0;position:absolute;top:0;left:0;width:100vw;height:100vh"
    title="preact-kitchen-sink"
  />
</div>
`;

exports[`Storyshots App|acceptance riot-kitchen-sink 1`] = `
.emotion-0 {
  font-family: -apple-system,".SFNSText-Regular","San Francisco",BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue","Lucida Grande","Arial",sans-serif;
  color: #444;
  -webkit-font-smoothing: antialiased;
  font-size: 13px;
}

<div
  class="emotion-0 emotion-1"
>
  <iframe
    src="riot-kitchen-sink/index.html"
    style="border:0;position:absolute;top:0;left:0;width:100vw;height:100vh"
    title="riot-kitchen-sink"
  />
</div>
`;

exports[`Storyshots App|acceptance svelte-kitchen-sink 1`] = `
.emotion-0 {
  font-family: -apple-system,".SFNSText-Regular","San Francisco",BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue","Lucida Grande","Arial",sans-serif;
  color: #444;
  -webkit-font-smoothing: antialiased;
  font-size: 13px;
}

<div
  class="emotion-0 emotion-1"
>
  <iframe
    src="svelte-kitchen-sink/index.html"
    style="border:0;position:absolute;top:0;left:0;width:100vw;height:100vh"
    title="svelte-kitchen-sink"
  />
</div>
`;

exports[`Storyshots App|acceptance vue-kitchen-sink 1`] = `
.emotion-0 {
  font-family: -apple-system,".SFNSText-Regular","San Francisco",BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue","Lucida Grande","Arial",sans-serif;
  color: #444;
  -webkit-font-smoothing: antialiased;
  font-size: 13px;
}

<div
  class="emotion-0 emotion-1"
>
  <iframe
    src="vue-kitchen-sink/index.html"
    style="border:0;position:absolute;top:0;left:0;width:100vw;height:100vh"
    title="vue-kitchen-sink"
  />
</div>
`;
